done social,footer,header; fixed customer - del horizontal scroll bar

--- a/css/awesome.css
+++ b/css/awesome.css
@@ -5,10 +5,6 @@
 }
 
 
-.awesome_title{  
-    margin-top: 100px;     
-}
-
 
 .awesome_text{
     margin-top: 30px;
