--- a/css/pricing.css
+++ b/css/pricing.css
@@ -2,10 +2,8 @@
     width: 100%;
     background-color: #F5F5F5;
     background-size: contain;
-    padding-top: 80px;
     padding-bottom: 80px;
 }
-
 
 .price_text{
     margin-top: 34px;
@@ -24,6 +22,11 @@
     flex-direction: column;  
     margin: 0 15px;
     width: 340px;
+    transition: 0.3s;
+  }
+
+  .card:hover{
+    box-shadow: 7px 7px 5px rgba(0,0,0,0.6);
   }
 
   .card_item{ 
